# Header-only-skeleton

./: .gitignore  .gitmodules  .travis.yml  CMakeLists.txt  README.md  appveyor.yml  travis.sh
Benchmark/: CMakeLists.txt
Doc/: CMakeLists.txt  Doxygen.in  myDoxy.in
Examples/: CMakeLists.txt
Test/: CMakeLists.txt  run-test.cpp  test-1.cpp  test-2.cpp
include/: CMakeLists.txt
